@@ -13,6 +13,7 @@ Search and Replace Scanner 7.x-1.x-dev, xxxx-xx-xx
 #2280999 by DamienMcKenna: Replacement in field collection.
 #2971845 by DamienMcKenna: Write test coverage for the text replacement
   functionality.
+#2905579 by DamienMcKenna: Drupal Coding Standards.
 
 
 Search and Replace Scanner 7.x-1.0-beta1, 2015-10-16
